# cmake-example-subproject

./: CMakeLists.txt  buildme.sh  distclean.sh
Applications/: CMakeLists.txt
Applications/app1/: CMakeLists.txt
Applications/app1/Source/: app1.cpp
Applications/app2/: CMakeLists.txt
Applications/app2/Source/: app2.cpp
Components/: CMakeLists.txt
Components/comp1/: CMakeLists.txt
Components/comp1/Source/: comp1.cpp
Components/comp1/include/: comp1.h
Components/comp2/: CMakeLists.txt
Components/comp2/Source/: comp2.cpp
Components/comp2/include/: comp2.h
Components/comp3/: CMakeLists.txt
Components/comp3/include/: comp3.h
